--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -14,9 +14,13 @@ a {
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	height: 44px;
+	height: 45px;
 	background-color: blue;
+	transition: 1s;
+}
 
+.nav:hover {
+	height: 20vh;
 }
 
 .main {
@@ -55,26 +59,9 @@ a {
 	padding-right: 10px;
 }
 
-.circle {
-	height: 15vh;
-	width: 15vh;
-	position: absolute;
-	bottom: 0px;
-	left: 0px;
-	border-radius: 100%;
-	transition: 1s;
-}
-
-.circle:hover {
-	border-radius: 100%;
-	height: 40vh;
-	width: 40vh;
-	background-color: blue;
-}
-
 .col4 {
-	height: 500px;
-	width: 10vw;
+	height: 300px;
+	width: 15vw;
 	overflow: scroll;
 }
 
