--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -79,7 +79,7 @@ a {
 	width: 20vw;
 	height: 700px;
 	overflow: scroll;
-	color: blue;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size: 14px;
 	padding-left: 2px;
 	padding-right: 2px;
