--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -7,6 +7,41 @@ a {
 	color:red;
 }
 
+@font-face {
+	font-family: 'termina';
+	src: url('fonts/Termina\ W05\ Bold.otf');
+}
+
+@font-face {
+	font-family: 'truenobld';
+	src: url('fonts/TruenoRoundBd.otf');
+}
+
+@font-face {
+	font-family: 'trueno';
+	src: url('fonts/TruenoRound.otf');
+}
+
+@font-face {
+	font-family: 'truenoit';
+	src: url('fonts/TruenoRoundIt.otf');
+}
+
+@font-face {
+	font-family: 'truenobldit';
+	src: url('fonts/TruenoRoundBdIt.otf');
+}
+
+@font-face {
+	font-family: 'koz';
+	src: url('fonts/KozGoPr6N-Bold.otf');
+}
+
+@font-face {
+	font-family: 'adobebld';
+	src: url('fonts/AdobeClean-ExtraBold.otf');
+}
+
 /* home */
 
 .nav {
@@ -15,12 +50,7 @@ a {
 	top: 0px;
 	left: 0px;
 	height: 45px;
-	background-color: blue;
-	transition: 1s;
-}
-
-.nav:hover {
-	height: 20vh;
+	background-color: white;
 }
 
 .main {
@@ -30,29 +60,108 @@ a {
 	margin-top: 45px;
 }
 
+.header {
+	font-size: 24px;
+	font-family: 'termina';
+	margin-bottom: 15px;
+	top: 0px;
+	position: sticky;
+	background-color: white;
+	padding-top: 4px;
+	padding-bottom: 10px;
+}
 
 .col1 {
 	width: 20vw;
-	height: 700px;
+	height: 87.15vh;
 	overflow: scroll;
-	font-size: 14px;
-	font-family: Georgia, 'Times New Roman', Times, serif;
+	font-size: 20px;
+	font-family: 'trueno';
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
+.title1 {
+	width: 40px;
+	height: 87.15vh;
+	background-color: white;
+	padding-left: 10px;
+}
+
+.tit {
+	width: 100vw;
+	font-size: 30px;
+	overflow: auto;
+	color: blue;
+	transform: rotate(90deg);
+	transform-origin: bottom left;
+	font-family: 'truenobldit';
+	padding-left: 300px;
+}
+
 
 .col2 {
 	width: 50vw;
-	height: 700px;
+	height: 87.15vh;
 	overflow: scroll;
 	padding-left: 10px;
 	padding-right: 10px;
+	font-size: 18px;
+	font-family: 'trueno';
 }
 
+.col2 .middle {
+	width: 75%;
+	padding: 20px;
+	background-color: rgb(24, 24, 24);
+	border-radius: 40px;
+  	margin-left: auto;
+	margin-right: auto;
+  	margin-bottom: 5px;
+	padding-top: 15px;
+	color: white;
+}
+
+.col2 .right {
+	width: 75%;
+	padding: 20px;
+	background-color: rgba(0, 0, 255, 0.753);
+	border-top-right-radius: 40px;
+	border-bottom-left-radius: 40px;
+	border-top-left-radius: 40px;
+  	padding-top: 15px;
+  	margin-left: auto;
+	margin-bottom: 5px;
+	color: white;
+}
+
+.col2 .left {
+	width: 75%;
+	padding: 20px;
+	background-color: rgb(123, 176, 255);
+	border-top-right-radius: 40px;
+	border-bottom-right-radius: 40px;
+	border-top-left-radius: 40px;
+  	padding-top: 15px;
+  	margin-right: auto;
+	margin-bottom: 5px;
+	color: white;
+}
+
+.col2 .bar {
+	width: 40px;
+	height: 40px;
+	background-color: tomato;
+	border-radius: 40px;
+  	padding-top: 10px;
+  	margin-right: auto;
+	margin-bottom: 5px;
+	padding: 10px;
+}
 
 .col3 {
 	width: 55vw;
-	height: 700px;
+	height: 87.15vh;
 	overflow: scroll;
 	font-size: 20px;
 	padding-left: 10px;
@@ -60,7 +169,7 @@ a {
 }
 
 .col4 {
-	height: 30vh;
+	height: 87.15vh;
 	width: 15vw;
 	overflow: scroll;
 }
@@ -77,23 +186,39 @@ a {
 
 .col5 {
 	width: 20vw;
-	height: 700px;
+	height: 87.15vh;
 	overflow: scroll;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	font-size: 14px;
-	padding-left: 2px;
-	padding-right: 2px;
+	font-family: 'adobebld';
+	font-size: 24px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 8px;
+	color: white;
+	background-color: blue;
+  	box-shadow: inset 0 0 50px 20px white;
 }
 
 .marquee_text {
-    font-size: 6rem;
+    font-size: 4rem;
     font-weight: bold;
-    line-height: 7rem;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    line-height: 4.5rem;
+    position: fixed;
+    bottom: 0px;
 	overflow: hidden;
+	background-color: blue;
+	color: white;
 }
+
+/* .marquee_text2 {
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 2.5rem;
+    position: fixed;
+    top: 0px;
+	overflow: hidden;
+	background-color: blue;
+	color: white;
+} */
 
 
 
