--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -69,13 +69,21 @@ a {
 	background-color: white;
 	padding-top: 4px;
 	padding-bottom: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 70px;
+}
+
+.item1 .item2 {
+	font-size: 24px;
+	font-family: 'termina';
 }
 
 .col1 {
 	width: 20vw;
 	height: 87.15vh;
 	overflow: scroll;
-	font-size: 20px;
+	font-size: 16px;
 	font-family: 'trueno';
 	padding-left: 10px;
 	padding-right: 10px;
@@ -101,7 +109,7 @@ a {
 
 
 .col2 {
-	width: 50vw;
+	width: 60vw;
 	height: 87.15vh;
 	overflow: scroll;
 	padding-left: 10px;
@@ -149,9 +157,29 @@ a {
 }
 
 .col2 .bar {
+	width: 100%;
+	background-color: tomato;
+	border-radius: 40px;
+  	padding-top: 10px;
+  	margin-right: auto;
+	margin-bottom: 5px;
+	padding: 10px;
+}
+
+.col2 .bar2 {
+	width: 100%;
+	background-color: rgb(255, 206, 71);
+	border-radius: 40px;
+  	padding-top: 10px;
+  	margin-right: auto;
+	margin-bottom: 5px;
+	padding: 10px;
+}
+
+.col2 .circle {
 	width: 40px;
 	height: 40px;
-	background-color: tomato;
+	background-color: rgba(0, 0, 255, 0.753);
 	border-radius: 40px;
   	padding-top: 10px;
   	margin-right: auto;
@@ -166,6 +194,7 @@ a {
 	font-size: 20px;
 	padding-left: 10px;
 	padding-right: 10px;
+	font-family: 'TruenoRoundIt';
 }
 
 .col4 {
@@ -193,9 +222,8 @@ a {
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 8px;
-	color: white;
-	background-color: blue;
-  	box-shadow: inset 0 0 50px 20px white;
+	/*background-color: blue;
+  	box-shadow: inset 0 0 50px 20px white;*/
 }
 
 .marquee_text {
