--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -44,13 +44,33 @@ a {
 
 /* home */
 
-.nav {
+.nav1 {
 	width: 100%;
 	position: fixed;
 	top: 0px;
 	left: 0px;
 	height: 45px;
 	background-color: white;
+}
+
+.nav {
+	position: fixed;
+	top: 10px;
+	right: 10px;
+	z-index: 2;
+	cursor: pointer;
+}
+
+.menu {
+	height: 100vh;
+	width: 50vw;
+	background-color: rgb(0, 0, 0);
+	position: fixed;
+	right: -50vw;
+	top: 0px;
+	z-index: 1;
+	transition: all 2s;
+	color: white;
 }
 
 .main {
@@ -185,6 +205,17 @@ a {
   	margin-right: auto;
 	margin-bottom: 5px;
 	padding: 10px;
+}
+
+.col2_1 {
+	width: 20vw;
+	height: 87.15vh;
+	overflow: scroll;
+	font-size: 16px;
+	font-family: 'truenobld';
+	padding-left: 10px;
+	padding-right: 10px;
+	color: blue;
 }
 
 .col3 {
