--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -44,14 +44,6 @@ a {
 
 /* home */
 
-.nav1 {
-	width: 100%;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	height: 45px;
-	background-color: white;
-}
 
 .nav {
 	position: fixed;
@@ -83,12 +75,11 @@ a {
 .header {
 	font-size: 24px;
 	font-family: 'termina';
-	margin-bottom: 15px;
 	top: 0px;
 	position: sticky;
 	background-color: white;
 	padding-top: 4px;
-	padding-bottom: 10px;
+	padding-bottom: 20px;
 	display: flex;
 	flex-wrap: wrap;
 	column-gap: 70px;
@@ -124,7 +115,7 @@ a {
 	transform: rotate(90deg);
 	transform-origin: bottom left;
 	font-family: 'truenobldit';
-	padding-left: 200px;
+	padding-left: 0px;
 	padding-bottom: 5px;
 }
 
@@ -221,11 +212,22 @@ a {
 	width: 20vw;
 	height: 87.15vh;
 	overflow: scroll;
-	font-size: 16px;
+	font-size: 18px;
 	font-family: 'truenobld';
 	padding-left: 10px;
 	padding-right: 10px;
 }
+
+.col3_1 {
+	width: 40vw;
+	height: 87.15vh;
+	overflow: scroll;
+	font-size: 20px;
+	font-family: 'trueno';
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
 .image1 {
 	width: 20vw;
 	height: 87.15vh;
@@ -234,6 +236,7 @@ a {
 
 .image1 img {
 	filter: grayscale(100%);
+	height: 87.15vh;
 }
 
 .col3 {
