--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -51,25 +51,76 @@ a {
 	right: 10px;
 	z-index: 2;
 	cursor: pointer;
+	color: blue;
+	font-family: 'truenobldit';
+	display: flex;
+	flex-wrap: wrap;
 }
+
+.eyes {
+	margin-left: 5px;
+}
+
+.bluecircle {
+	width: 30px;
+	height: 30px;
+	background-color: blue;
+	border-radius: 50%;
+	margin-left: 5px;
+}
+
 
 .menu {
 	height: 100vh;
 	width: 50vw;
-	background-color: rgb(0, 0, 0);
+	background-color: blue;
 	position: fixed;
 	right: -50vw;
 	top: 0px;
 	z-index: 1;
 	transition: all 2s;
 	color: white;
+	font-family: 'trueno';
+
 }
+.container1 {
+	text-align: left;
+	padding-left: 20px;
+	padding-top: 93px;
+	padding-right: 20px;
+	font-size: 35px;
+
+}
+
+.menu.showme {
+	right: 0;
+	transition: all 1s;
+  }
 
 .main {
 	width: 400vh;
 	display: flex;
 	overflow: scroll;
 	margin-top: 45px;
+}
+
+.title_col {
+	width: 50px;
+	height: 87.15vh;
+	background-color: white;
+	padding-left: 10px;
+}
+
+.title {
+	width: 80vh;
+	font-size: 30px;
+	overflow: auto;
+	color: black;
+	transform: rotate(90deg);
+	transform-origin: bottom left;
+	font-family: 'termina';
+	padding-left: 20px;
+	padding-bottom: 5px;
 }
 
 .header {
@@ -80,14 +131,25 @@ a {
 	background-color: white;
 	padding-top: 4px;
 	padding-bottom: 20px;
-	display: flex;
-	flex-wrap: wrap;
-	column-gap: 70px;
 }
 
-.item1 .item2 {
-	font-size: 24px;
-	font-family: 'termina';
+.item {
+	display: inline-flex;
+	margin-right: 0px;
+	font-size: 14px;
+}
+
+.circle {
+	width: 14px;
+	height: 14px;
+	border: 2px solid blue;
+	border-radius: 40px;
+	margin-left: 4px;
+}
+
+.podcast {
+	margin-top: 10px;
+	text-align: center;
 }
 
 .col1 {
@@ -100,27 +162,9 @@ a {
 	padding-right: 10px;
 }
 
-.title1 {
-	width: 40px;
-	height: 87.15vh;
-	background-color: white;
-	padding-left: 10px;
-}
-
-.tit {
-	width: 100vw;
-	font-size: 30px;
-	overflow: auto;
-	color: blue;
-	transform: rotate(90deg);
-	transform-origin: bottom left;
-	font-family: 'truenobldit';
-	padding-left: 0px;
-	padding-bottom: 5px;
-}
 
 
-.col2 {
+.col1_2 {
 	width: 60vw;
 	height: 87.15vh;
 	overflow: scroll;
@@ -130,7 +174,7 @@ a {
 	font-family: 'trueno';
 }
 
-.col2 .middle {
+.col1_2 .middle {
 	width: 75%;
 	padding: 20px;
 	border: 2px solid black;
@@ -141,7 +185,7 @@ a {
 	padding-top: 15px;
 }
 
-.col2 .right {
+.col1_2 .right {
 	width: 75%;
 	padding: 20px;
 	border: 2px solid blue;
@@ -154,7 +198,9 @@ a {
 	color: blue;
 }
 
-.col2 .left {
+
+
+.col1_2 .left {
 	width: 75%;
 	padding: 20px;
 	border: 2px solid rgb(123, 176, 255);
@@ -167,7 +213,31 @@ a {
 	color: rgb(123, 176, 255);
 }
 
-.col2 .bar {
+.right {
+	width: 49%;
+	padding: 20px;
+	border: 2px solid black;
+	border-radius: 40px;
+  	padding-top: 15px;
+  	
+	margin-bottom: 5px;
+	color: black;
+	display: inline-flex;
+}
+
+.left {
+	width: 49%;
+	padding: 20px;
+	border: 2px solid black;
+	border-radius: 40px;
+  	padding-top: 15px;
+  	
+	margin-bottom: 5px;
+	color: black;
+	display: inline-flex;
+}
+
+.col1_2 .bar {
 	width: 100%;
 	background-color: tomato;
 	border-radius: 40px;
@@ -177,7 +247,7 @@ a {
 	padding: 2px;
 }
 
-.col2 .bar2 {
+.col1_2 .bar2 {
 	width: 100%;
 	background-color: rgb(255, 206, 71);
 	border-radius: 40px;
@@ -187,7 +257,7 @@ a {
 	padding: 2px;
 }
 
-.col2 .bar3 {
+.col1_2 .bar3 {
 	width: 100%;
 	background-color: rgb(109, 255, 89);
 	border-radius: 40px;
@@ -197,32 +267,22 @@ a {
 	padding: 2px;
 }
 
-.col2 .circle {
-	width: 40px;
-	height: 40px;
-	border: 2px solid blue;
-	border-radius: 40px;
-  	padding-top: 10px;
-  	margin-right: auto;
-	margin-bottom: 5px;
-	padding: 10px;
-}
 
-.col2_1 {
-	width: 20vw;
+.col2 {
+	width: 40vw;
 	height: 87.15vh;
 	overflow: scroll;
-	font-size: 18px;
-	font-family: 'truenobld';
+	font-size:30px;
+	font-family: 'trueno';
 	padding-left: 10px;
 	padding-right: 10px;
 }
 
-.col3_1 {
-	width: 40vw;
+.col3 {
+	width: 60vw;
 	height: 87.15vh;
 	overflow: scroll;
-	font-size: 20px;
+	font-size: 50px;
 	font-family: 'trueno';
 	padding-left: 10px;
 	padding-right: 10px;
@@ -230,16 +290,16 @@ a {
 
 .image1 {
 	width: 20vw;
-	height: 87.15vh;
+	height: 87vh;
 	overflow: scroll;
 }
 
 .image1 img {
 	filter: grayscale(100%);
-	height: 87.15vh;
+	height: 87vh;
 }
 
-.col3 {
+.col4 {
 	width: 55vw;
 	height: 87.15vh;
 	overflow: scroll;
@@ -249,46 +309,69 @@ a {
 	font-family: 'TruenoRoundIt';
 }
 
-.col4 {
+.image2 {
 	height: 87.15vh;
 	width: 15vw;
 	overflow: scroll;
 }
 
-.col4 img {
+.image2 img {
 	height: 25vh;
 	filter: grayscale(100%);
 	transition: 1s;
 }
 
-/*
-.col4 img:hover {
-	filter: none;
+
+.image3 {
+	height: 87vh;
+	width: 20vw;
+	overflow: scroll;
 }
-*/
+
+
 
 .col5 {
 	width: 20vw;
 	height: 87.15vh;
 	overflow: scroll;
-	font-family: 'adobebld';
+	font-family: 'trueno';
 	font-size: 24px;
 	padding-left: 10px;
 	padding-right: 10px;
-	padding-top: 8px;
 	/*background-color: blue;
   	box-shadow: inset 0 0 50px 20px white;*/
+}
+
+.col6 {
+	width: 80vw;
+	height: 87.15vh;
+	padding-left: 10px;
+	padding-right: 10px;
+	overflow: scroll;
+	font-size: 22px;
+	font-family: 'trueno';
+	text-align: justify;
+}
+
+.col6_2 {
+	width: 40vw;
+	height: 87.15vh;
+	padding-left: 10px;
+	padding-right: 10px;
+	overflow: scroll;
 }
 
 .marquee_text {
     font-size: 4rem;
     font-weight: bold;
-    line-height: 4.5rem;
+    line-height: 4.7rem;
     position: fixed;
     bottom: 0px;
 	overflow: hidden;
 	background-color: blue;
 	color: white;
+	font-family: 'termina';
+	
 }
 
 /* .marquee_text2 {
@@ -302,38 +385,3 @@ a {
 	color: white;
 } */
 
-
-
-
-
-/* landing */
-
-.container{
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.leftside{
-	width: 30%;
-	background-color: black;
-	color: bisque;
-	padding: 10px;
-	overflow: hidden;
-	overflow: scroll;
-	font-size: 20px;
-}
-
-.navi {
-	width: 100%;
-	background-color: blueviolet;
-	color: chocolate;
-	padding: 10px;
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-.start {
-	margin-top: 50px;
-}
