--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -354,13 +354,15 @@ a {
 }
 
 .col6 {
-	width: 40vw;
+	width: 20vw;
 	height: 87.15vh;
 	padding-left: 10px;
 	padding-right: 10px;
+	padding-top: 48px;
 	overflow: scroll;
 	font-size: 60px;
 	font-family: 'trueno';
+	writing-mode: vertical-rl;
 }
 
 .col6_2 {
