--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -65,7 +65,7 @@ a {
 	width: 30px;
 	height: 30px;
 	background-color: blue;
-	border-radius: 50%;
+	border: 2px solid white; 
 	margin-left: 5px;
 }
 
@@ -98,7 +98,7 @@ a {
   }
 
 .main {
-	width: 700vw;
+	width: 320vw;
 	display: flex;
 	overflow: scroll;
 	margin-top: 45px;
@@ -123,6 +123,35 @@ a {
 	padding-bottom: 5px;
 }
 
+.btitle_col {
+	width: 50px;
+	height: 87.15vh;
+	background-color: blue;
+	padding-left: 10px;
+}
+
+.btitle {
+	width: 80vh;
+	font-size: 30px;
+	overflow: auto;
+	color: white;
+	transform: rotate(90deg);
+	transform-origin: bottom left;
+	font-family: 'termina';
+	padding-left: 20px;
+	padding-bottom: 5px;
+}
+
+.head  {
+	font-size: 24px;
+	font-family: 'termina';
+	top: 0px;
+	position: sticky;
+	background-color: white;
+	padding-top: 4px;
+	padding-bottom: 20px;	
+}
+
 .header {
 	font-size: 24px;
 	font-family: 'termina';
@@ -131,36 +160,39 @@ a {
 	background-color: white;
 	padding-top: 4px;
 	padding-bottom: 20px;
+	display: flex;
+	flex-wrap: wrap;
 }
 
-.headerblack {
+.headerblue {
 	font-size: 24px;
 	font-family: 'termina';
 	top: 0px;
 	position: sticky;
-	background-color: black;
+	background-color: blue;
 	color: white;
 	padding-top: 4px;
 	padding-bottom: 20px;
 }
 
 .item {
-	display: inline-flex;
-	margin-right: 0px;
-	font-size: 14px;
+	margin-left: auto;
+	font-size: 18px;
 }
 
 .circle {
 	width: 14px;
 	height: 14px;
 	border: 2px solid blue;
-	border-radius: 40px;
+	border-top-right-radius: 40px;
+	border-bottom-left-radius: 40px;
+	border-top-left-radius: 40px;
 	margin-left: 4px;
+	display: inline-flex;
 }
 
-.podcast {
-	margin-top: 10px;
-	text-align: center;
+.head audio {
+	width: 100%;
 }
 
 .col1 {
@@ -224,29 +256,6 @@ a {
 	color: rgb(123, 176, 255);
 }
 
-.rightbub {
-	width: 49%;
-	padding: 20px;
-	border: 2px solid black;
-	border-radius: 40px;
-  	padding-top: 15px;
-  	
-	margin-bottom: 5px;
-	color: black;
-	display: inline-flex;
-}
-
-.leftbub {
-	width: 49%;
-	padding: 20px;
-	border: 2px solid black;
-	border-radius: 40px;
-  	padding-top: 15px;
-  	
-	margin-bottom: 5px;
-	color: black;
-	display: inline-flex;
-}
 
 .col1_2 .bar {
 	width: 100%;
@@ -283,10 +292,12 @@ a {
 	width: 30vw;
 	height: 87.15vh;
 	overflow: scroll;
-	font-size:30px;
+	font-size:32px;
 	font-family: 'trueno';
 	padding-left: 10px;
 	padding-right: 10px;
+	background-color: blue;
+	color: white;
 }
 
 .col2text {
@@ -298,11 +309,23 @@ a {
 	width: 60vw;
 	height: 87.15vh;
 	overflow: scroll;
-	font-size: 45px;
+	font-size: 60px;
 	font-family: 'trueno';
 	padding-left: 10px;
 	padding-right: 10px;
 	
+}
+
+.col3_2 {
+	width: 40vw;
+	height: 87.15vh;
+	overflow: scroll;
+	font-size: 18px;
+	padding-left: 10px;
+	padding-right: 10px;
+	font-family: 'Trueno';
+	background-color: blue;
+	color: white;
 }
 
 .col3text {
@@ -321,17 +344,6 @@ a {
 	height: 87vh;
 }
 
-.col3_2 {
-	width: 40vw;
-	height: 87.15vh;
-	overflow: scroll;
-	font-size: 20px;
-	padding-left: 10px;
-	padding-right: 10px;
-	font-family: 'Trueno';
-	background-color: black;
-	color: white;
-}
 
 .image2 {
 	height: 87.15vh;
@@ -366,7 +378,19 @@ a {
   	box-shadow: inset 0 0 50px 20px white;*/
 }
 
-.col6 {
+
+.col4 {
+	width: 70vw;
+	height: 87.15vh;
+	padding-left: 15px;
+	padding-right: 15px;
+	overflow: scroll;
+	font-size: 18px;
+	font-family: 'trueno';
+	text-align: justify;
+}
+
+.col4_2 {
 	width: 20vw;
 	height: 87.15vh;
 	padding-left: 10px;
@@ -376,26 +400,32 @@ a {
 	font-size: 60px;
 	font-family: 'trueno';
 	writing-mode: vertical-rl;
+	background-color: blue;
+	color: white;
 }
 
-.col6_2 {
-	width: 70vw;
-	height: 87.15vh;
-	padding-left: 15px;
-	padding-right: 15px;
-	overflow: scroll;
-	font-size: 22px;
-	font-family: 'trueno';
-	text-align: justify;
-	text-transform: capitalize;
+.rightbub {
+	width: 49%;
+	padding: 20px;
+	border: 2px solid black;
+	border-radius: 40px;
+  	padding-top: 15px;
+  	
+	margin-bottom: 5px;
+	color: black;
+	display: inline-flex;
 }
 
-.col6_3 {
-	width: 40vw;
-	height: 87.15vh;
-	padding-left: 10px;
-	padding-right: 10px;
-	overflow: scroll;
+.leftbub {
+	width: 49%;
+	padding: 20px;
+	border: 2px solid black;
+	border-radius: 40px;
+  	padding-top: 15px;
+  	
+	margin-bottom: 5px;
+	color: black;
+	display: inline-flex;
 }
 
 .marquee_text {
