--- a/6.chrome/assets/css/main.css
+++ b/6.chrome/assets/css/main.css
@@ -5,7 +5,15 @@ body {
 
 a {
 	color:blue;
-	
+	text-decoration: none;
+	border-radius: 100%;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+a:hover {
+	background-color: blue;
+	color: white;
 }
 
 @font-face {
